tests/invalid/runtime/int_to_byte_range.pts
function main() : void {
    int x = 300;
    byte b = x.toByte();
}
